# webshop_UI

./: BUILD_FIX_README.md  INSTALLATION.md  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
webshop_ui/: hooks.py  patches.txt
webshop_ui/modules/: __init__.py
webshop_ui/public/: app.txt  build.json
webshop_ui/public/css/: organic-theme.css
webshop_ui/public/js/: organic-theme.js
webshop_ui/templates/includes/: footer.html  navbar.html
webshop_ui/templates/pages/: home.html
webshop_ui/www/: home.py
